--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 
         <!--Search Engine Optimization-->
         <article id="search-engine-optimization" class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="workspace" title="workspace"/>
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="workspace"
+                title="workspace" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they
@@ -49,7 +50,8 @@
 
         <!--Online Reputation Management-->
         <article id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="laptop" title="laptop"/>
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="laptop"
+                title="laptop" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an
@@ -60,7 +62,8 @@
 
         <!--Social Media Marketing-->
         <article id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="social-media-icons" title="social-media-icons"/>
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="social-media-icons"
+                title="social-media-icons" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps
@@ -70,40 +73,47 @@
         </article>
     </section>
 
+    <!--Benefits section-->
+    <section class="benefits">
 
-
-    <div class="benefits">
-        <div class="benefit-lead">
+        <!--Benefit Lead-->
+        <article class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="cogwheel" title="cogwheel" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers
                 directly to your website.
             </p>
-        </div>
-        <div class="benefit-brand">
+        </article>
+
+        <!--Benefit Brand-->
+        <article class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="lightbulb" title="lightbulb" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and
                 visibility for your business.
             </p>
-        </div>
-        <div class="benefit-cost">
-            <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            </article>
+
+            <!--Benefit Cost-->
+            <article class="benefit-cost">
+                <h3>Cost Management</h3>
+                <img src="./assets/images/cost-management.png" alt="coins" title="coins"/>
+                <p>
+                    As the search ranking for your business increases, your advertising costs decrease, and you no
+                    longer need to advertise your page.
+                </p>
+            </article>
+    </section>
+
+
+        <footer>
+            <h2>Made with ❤️️ by Horiseon</h2>
             <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no
-                longer need to advertise your page.
+                &copy; 2019 Horiseon Social Solution Services, Inc.
             </p>
-        </div>
-    </div>
-    <div class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
-        <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
-        </p>
-    </div>
+        </footer>
 </body>
 
 </html>
