updated nav and header in styles and made the benefits styles smaller

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <section class="benefits">
 
         <!--Benefit Lead-->
-        <article class="benefit-lead">
+        <article class="benefit-lead" class="benefit-content">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="cogwheel" title="cogwheel" />
             <p>
@@ -87,7 +87,7 @@
         </article>
 
         <!--Benefit Brand-->
-        <article class="benefit-brand">
+        <article class="benefit-brand" class="benefit-content">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="lightbulb" title="lightbulb" />
             <p>
@@ -97,7 +97,7 @@
             </article>
 
             <!--Benefit Cost-->
-            <article class="benefit-cost">
+            <article class="benefit-cost" class="benefit-content">
                 <h3>Cost Management</h3>
                 <img src="./assets/images/cost-management.png" alt="coins" title="coins"/>
                 <p>
