added classes to section and articles. Added those classes to CSS to compress the CSS

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 
 
     <!--content section-->
-    <section class="content">
+    <section class="content" class="content-main">
 
         <!--Search Engine Optimization-->
-        <article id="search-engine-optimization" class="search-engine-optimization">
+        <article id="search-engine-optimization" class="content-main">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="workspace"
                 title="workspace" />
             <h2>Search Engine Optimization</h2>
@@ -49,7 +49,7 @@
         </article>
 
         <!--Online Reputation Management-->
-        <article id="online-reputation-management" class="online-reputation-management">
+        <article id="online-reputation-management" class="content-main">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="laptop"
                 title="laptop" />
             <h2>Online Reputation Management</h2>
@@ -61,7 +61,7 @@
         </article>
 
         <!--Social Media Marketing-->
-        <article id="social-media-marketing" class="social-media-marketing">
+        <article id="social-media-marketing" class="content-main">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="social-media-icons"
                 title="social-media-icons" />
             <h2>Social Media Marketing</h2>
@@ -74,10 +74,10 @@
     </section>
 
     <!--Benefits section-->
-    <section class="benefits">
+    <section class="benefits" class="benefit-main">
 
         <!--Benefit Lead-->
-        <article class="benefit-lead" class="benefit-content">
+        <article class="benefit-main">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="cogwheel" title="cogwheel" />
             <p>
@@ -87,7 +87,7 @@
         </article>
 
         <!--Benefit Brand-->
-        <article class="benefit-brand" class="benefit-content">
+        <article class="benefit-main">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="lightbulb" title="lightbulb" />
             <p>
@@ -97,7 +97,7 @@
             </article>
 
             <!--Benefit Cost-->
-            <article class="benefit-cost" class="benefit-content">
+            <article class="benefit-main">
                 <h3>Cost Management</h3>
                 <img src="./assets/images/cost-management.png" alt="coins" title="coins"/>
                 <p>
